--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Boolzap</title>
     <link rel="stylesheet" href="./style/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <section class="flex-center h-100">
+        <div class="container"></div>
+      </section>
+    </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
