--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 
   <body>
     <div id="root">
-      <section class="flex-center h-100">
-        <div class="container"></div>
-      </section>
+      <main id="wa-interface" class="flex-center h-100">
+        <div class="container flex">
+          <section id="chat-list">
+            <div class="user">
+              <img src="./img/avatar_io.jpg" alt="" />
+              <h3>Nome utente</h3>
+            </div>
+            <div class="icons"></div>
+          </section>
+          <section id="current-chat"></section>
+        </div>
+      </main>
     </div>
     <script src="./js/script.js"></script>
   </body>
