--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
             </div>
             <!-- disclaimer notifiche -->
             <div  id="enable-notification">
-              <i class="fas fa-bell-slash fa-2x circle mr"></i>
+              <i class="fas fa-bell-slash  circle mr"></i>
               <div>
                 <h4>Ricevi notifiche di nuovi messaggi</h4>
                 <span>Attiva notifiche desktop</span>
               </div>
+            </div>
+            <!-- input search -->
+            <div id="search-user">
+              <input type="text" value="" placeholder="&#x1F50E;      Cerca o inizia una nuova chat">
             </div>
           </section>
           <section id="current-chat"></section>
