--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="root">
       <main id="wa-interface" class="flex-center h-100">
         <div class="container flex">
+          <!-- *++++++++++++++++++++CHATS LIST++++++++++++++++++++++++++++ -->
           <section id="chat-list" >
             <!-- my-account -->
             <div id="user" >
@@ -45,12 +46,34 @@
               <ul>
                 <li class="contact" v-for="contact in contacts">
                   <img class="img-fluid circle" :src="'./img/avatar' + contact.avatar + '.jpg'" alt="">
-                  
+                  <h5>{{contact.name}}</h5>
                 </li>
               </ul>
             </div>
           </section>
-          <section id="current-chat"></section>
+           <!-- *++++++++++++++++++++CHAT SECTION++++++++++++++++++++++++++++ -->
+          <section id="current-chat">
+            <!-- current contact head -->
+            <div id="current-contact">
+              <div class="flex-start-center h-100">
+                <img class="img-fluid circle" src="./img/avatar_1.jpg" alt="">
+                <div>
+                  <h4>Michele</h4>
+                  <span>Ultimo accesso oggi alle</span>
+                </div>
+              </div>
+              <div>
+                <i class="fas fa-search  fa-lg"></i>
+                <i class="fas fa-paperclip  fa-lg"></i>
+                <i class="fas fa-ellipsis-v  fa-lg"></i>
+              </div>
+            </div>
+            <!-- chat -->
+            <div id="chat-desk">
+              
+            </div>
+            <div id="chat-input"></div>
+          </section>
         </div>
       </main>
     </div>
