last received message date

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img class="img-fluid circle" :src="`./img/avatar${contact.avatar}.jpg`" alt="" />
                 <div>
                   <h4>{{contact.name}}</h4>
-                  <span>Ultimo accesso oggi alle</span>
+                  <span>Ultimo accesso oggi alle {{getLastMessageDate()}}</span>
                 </div>
               </div>
               <div>
