--- a/index.html
+++ b/index.html
@@ -98,14 +98,17 @@
             <!-- chat desk -->
             <div id="chat-desk">
               <div v-for="(message,index) in contact.messages" class="clearfix">
-                <div :class="getMessageType(message)" class="message">
-                  <i class="fas fa-chevron-down" @click="isVisible = !isVisible"></i>
+                <div  :class="getMessageType(message)" class="message">
+                  <div class="info-button">
+                    <i class="fas fa-chevron-down" ></i>
+                    <div class="info">
+                      <span @click="hideMessage(message)">Elimina</span>
+                      <span>Info</span>
+                    </div>
+                  </div>
                   <h4>{{message.message}}</h4>
                   <span class="date">{{message.date}}</span>
-                  <div  v-if="isVisible"    class="info">
-                    <span>elimina</span>
-                    <span>info</span>
-                  </div>
+                  
                 </div>
                 
               </div>
